[package]
name = "stride"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
#str-macro = "1.0.0"
log = "0.4"
env_logger = "0.9"
uuid = "0.8"
rand = "0.8"
rustc-hash = "1.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
#more-asserts = "0.2"

[[bench]]
name = "cert"
harness = false

[[bench]]
name = "examiner"
harness = false

[[bench]]
name = "havoc"
harness = false

[[bench]]
name = "sortedvec"
harness = false

[[bench]]
name = "suffix"
harness = false